# rolodex

./: .gitignore  App.tsx  LICENSE  app.json  package.json
circuits/: Nargo.toml  README.md  SPEC.md  test_vectors.json
circuits/src/: field_proof.nr  field_value.nr  leaf_hash.nr  main.nr  merkle_tree.nr  test_helpers.nr
circuits/testvectors/: Cargo.toml
circuits/testvectors/src/: main.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md
src/components/common/: ContextMenu.tsx  KVBContainer.tsx  KeyValueBox.tsx  Loading.tsx
src/components/screens/profile/: ContactInfo.tsx  (+4 more)
src/dialogs/: AddTriple.tsx  QR.tsx
src/hooks/: useTheme.ts
src/navigation/: AppNavigator.tsx  ConnectionsStack.tsx  ProfileStack.tsx  SemanticsStack.tsx  SettingsStack.tsx  TabNavigator.tsx
src/screens/: ConnectViaScreen.tsx  ConnectionDetailScreen.tsx  ConnectionsListScreen.tsx  PlaceholderScreen.tsx  ProfileScreen.tsx  SemanticsScreen.tsx  SettingsListScreen.tsx  ShareScreen.tsx
src/screens/semantics/: PredicateDetailsScreen.tsx  SemanticsScreen.tsx
src/screens/settings/: AboutScreen.tsx  AppearanceScreen.tsx  NotificationsScreen.tsx  SettingsListScreen.tsx  SettingsScreen.tsx  WalletScreen.tsx
src/services/: bluetooth.ts  contextMenu.ts  db.ts  exchange.ts  handshake.ts  storage.ts  wallet.ts
src/services/connection/: exchange.ts  qr.ts
src/theme/: ThemeProvider.tsx  themes.ts
src/theme/themes/: base.ts  bubbleGum.ts  dark.ts  highContrast.ts  light.ts  rolodex.ts
src/types/: db.ts  exchange.ts  settings.ts  storage.ts
src/utils/: crypto.ts  icons.tsx  parse.ts
(+19 files in other folders)
