[package]
name = "testvectors"
version = "0.1.0"
edition = "2024"

[dependencies]
bn254_blackbox_solver = "0.46.0"
acir_field = "0.46.0"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"
serde_json = "1.0.149"
unicode-normalization = "0.1"
ciborium = "0.2"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
